deploy: 2dea240bb4e3b3dfaee54e41b4dfa76a9d0680d8

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
+  <link rel="stylesheet" href="style.945e110a1c50af7a25e0.css?73f32c928a1687052797">
   <title>Silpo receipt management</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+  <script src="main.73f32c928a1687052797.js?73f32c928a1687052797"></script>
 </body>
 
 </html>
